--- a/get_cash_list.html
+++ b/get_cash_list.html
@@ -10,7 +10,7 @@
 		<script src="js/urlAddress.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 生产环境版本，优化了尺寸和速度 -->
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-		<title>资金明细</title>
+		<title>提现记录</title>
 		<style>
 			ul,
 			li {
@@ -42,43 +42,50 @@
 				<li v-for="data in datas" style="background: #FFFFFF;height: 50px;line-height: 50px;padding-left: 12px;padding-right: 12px;border-bottom: #E5E5E5 solid 1px;">
 					<div>
 						<span>提现: ¥{{data.money}}</span>
-						<span style="float: right;">审核{{data.result}}</span>
+						<span style="float: right;">{{data.result}}</span>
 					</div>
 				</li>
 			</ul>
 		</div>
 	</body>
 	<script>
+		addEventTest();
 		var app = new Vue({
 			el:"#id_app",
 			data:{
-				// datas:datas,
-				datas:[
-					{money:'0.5',result:'通过'},
-					{money:'0.5',result:'通过'},
-					{money:'1.0',result:'通过'},
-					{money:'1.0',result:'通过'},
-				],
+				datas:[],
 			},
 			mounted(){
-				// this.getData();
+				this.getData();
 			},
 			methods:{
 				getData(){
 					var that = this;
 					ajax({
 						method: 'POST',
-						url: MY_TEAM + "?access-token=" + localStorage.getItem('access-token'),
+						url: CASH_LIST + "?access-token=" + localStorage.getItem('access-token'),
 						success: function(obj) {
 							if (obj.success) {
 								for (var i = 0; i < obj.data.length; i++) {
+									var data = obj.data[i];
+									that.datas.push(that.cash(data.amount,data.status))
 								}
-							} else {
-								alert(obj.message)
 							}
 						}
 					})
 				},
+				cash:function(amount,status){
+					var c = new Object();
+					c.money = amount;
+					if(status == 0){
+						c.result = '待审核';
+					}else if(status == 1){
+						c.result = '审核通过';
+					}else{
+						c.result = '审核不通过';
+					}
+					return c;
+				}
 			}
 		});
 	</script>
