--- a/my_team.html
+++ b/my_team.html
@@ -31,6 +31,13 @@
 			body {
 				background: #F7F7F7;
 			}
+			.tab {
+				width: 49%;
+				display: inline-block;
+				text-align: center;
+				height: 40px;
+				line-height: 40px;
+			}
 		</style>
 	</head>
 	<body>
@@ -39,7 +46,17 @@
 				<img style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">我的团队</span>
 			</div>
-			<p style="margin-left: 15px;margin-top: 15px;">人数: {{userNum}}</p>
+			<!-- <p style="margin-left: 15px;margin-top: 15px;">人数: {{userNum}}</p> -->
+			
+			<div style="background: #FFFFFF;">
+				<div class="tab">
+					<span :style="selTab == 1 ? 'color:red':''" @click="team(1)">一级团队({{one_userNum}})</span>
+				</div>
+				<div class="tab">
+					<span :style="selTab == 2 ? 'color:red':''" @click="team(2)">二级团队({{two_userNum}})</span>
+				</div>
+			</div>
+			
 			<ul style="margin-top: 3%;">
 				<li v-for="data in datas" style="background: #FFFFFF;height: 50px;line-height: 50px;padding-left: 12px;padding-right: 12px;border-bottom: #E5E5E5 solid 1px;">
 					<div>
@@ -51,39 +68,56 @@
 		</div>
 	</body>
 	<script>
-		var datas = new Array();
+		addEventTest();
 		var num = 0;
 		var app = new Vue({
 			el:"#id_app",
 			data:{
-				datas:datas,
-				userNum:num
+				datas:[],
+				level_1:[],
+				level_2:[],
+				one_userNum:0,
+				two_userNum:0,
+				selTab:1,
 			},
 			mounted(){
 				this.getData();
 			},
 			methods:{
-				getData(){
+				team:function(tag){
+					var that = this;
+					that.selTab = tag;
+					if(tag == 1){
+						that.datas = that.level_1;
+					}else{
+						that.datas = that.level_2;
+					}
+				},
+				getData:function(){
 					var that = this;
 					ajax({
 						method: 'POST',
 						url: MY_TEAM + "?access-token=" + localStorage.getItem('access-token'),
 						success: function(obj) {
 							if (obj.success) {
-								for (var i = 0; i < obj.data.length; i++) {
-									var user = obj.data[i];
-									datas.push(that.userData(user.username,user.add_time));
+								for (var i = 0; i < obj.data.level_1.length; i++) {
+									var user = obj.data.level_1[i];
+									that.level_1.push(that.userData(user.phone,user.add_time));
 								}
-								that.userNum = datas.length;
-							} else {
-								alert(obj.message)
+								for (var i = 0; i < obj.data.level_2.length; i++) {
+									var user = obj.data.level_2[i];
+									that.level_2.push(that.userData(user.phone,user.add_time));
+								}
+								that.one_userNum = that.level_1.length;
+								that.two_userNum = that.level_2.length;
+								that.team(1);
 							}
 						}
 					})
 				},
-				userData(username,add_time){
+				userData:function(phone,add_time){
 					var user = new Object();
-					user.username = username;
+					user.username = phone;
 					user.add_time = add_time;
 					return user;
 				}
