--- a/updata_history.html
+++ b/updata_history.html
@@ -18,7 +18,7 @@
 				padding: 0;
 				margin: 0;
 			}
-			
+
 			p,
 			span {
 				font-size: 14px;
@@ -26,7 +26,7 @@
 				padding: 0px;
 				margin: 0px;
 			}
-			
+
 			body {
 				background: #F7F7F7;
 			}
@@ -41,56 +41,64 @@
 			<ul style="margin-top: 3%;">
 				<li v-for="data in datas" style="background: #FFFFFF;line-height: 30px;padding-left: 12px;padding-right: 12px;border-bottom: #E5E5E5 solid 1px;">
 					<div>
-						<span>订单号: {{data.orderNo}}</span>
+						<span>订单号: {{data.order_no}}</span>
 						<span style="float: right;">{{data.status}}</span>
 					</div>
 					<div>
-						<span>支付宝: {{data.alipayAccout}}</span>
+						<span>支付宝: {{data.account}}</span>
 					</div>
 					<div>
-						<span>金额: ¥ {{data.money}}</span>
-						<span style="float: right;">{{data.time}}</span>
-					</div>
-					<div v-if="data.isremake">
-						<span>备注: {{data.remake}}</span>
+						<span>金额: ¥ {{data.price}}</span>
+						<span style="float: right;">{{data.add_time}}</span>
 					</div>
 				</li>
 			</ul>
 		</div>
 	</body>
 	<script>
+		addEventTest();
 		var datas = new Array();
 		var app = new Vue({
-			el:"#id_app",
-			data:{
-				// datas:datas,
-				datas:[
-					{money:'0.5',result:'通过',orderNo:'1321365854748',status:'取消',alipayAccout:'15111475406',time:'2019/09/09 12:55',isremake:true,remake:'心萨迪克拉时间段阿萨德'},
-					{money:'0.5',result:'通过',orderNo:'1321365854748',status:'成功',alipayAccout:'15111475406',time:'2019/09/09 12:55',isremake:false},
-					{money:'0.5',result:'通过',orderNo:'1321365854748',status:'等待审核',alipayAccout:'15111475406',time:'2019/09/09 12:55',isremake:false},
-					{money:'0.5',result:'通过',orderNo:'1321365854748',status:'成功',alipayAccout:'15111475406',time:'2019/09/09 12:55',isremake:false},
-					{money:'0.5',result:'通过',orderNo:'1321365854748',status:'成功',alipayAccout:'15111475406',time:'2019/09/09 12:55',isremake:false},
-				],
+			el: "#id_app",
+			data: {
+				datas: [],
 			},
-			mounted(){
-				// this.getData();
+			mounted() {
+				this.getData();
 			},
-			methods:{
-				getData(){
+			methods: {
+				history: function(price,status,order_no,account,add_time) {
+					var history = new Object();
+					history.price = price;
+					history.order_no = order_no;
+					history.status = (status == '0') ? "成功" : "失败";
+					history.account = account;
+					history.add_time = add_time;
+					return history;
+				},
+				getData() {
 					var that = this;
 					ajax({
 						method: 'POST',
-						url: MY_TEAM + "?access-token=" + localStorage.getItem('access-token'),
+						url: UPDATA_HISTORY + "?access-token=" + localStorage.getItem('access-token'),
 						success: function(obj) {
+							console.log(obj)
 							if (obj.success) {
 								for (var i = 0; i < obj.data.length; i++) {
+									var data = obj.data[i];
+									that.datas.push(that.history(
+										StringToFloat(data.price),
+										data.status,
+										data.order_no,
+										data.account,
+										data.add_time
+									))
 								}
-							} else {
-								alert(obj.message)
 							}
 						}
 					})
 				},
+				
 			}
 		});
 	</script>
