--- a/task.html
+++ b/task.html
@@ -168,7 +168,7 @@
 					
 					if(status == "1"){
 						task.state = '审核中';
-					}else{
+					}else if(status == "2"){
 						task.state = '已完成';
 					}
 					
